--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
 </head>
 <body>
-
-<a href="video/list.html">
-    Listar videos
-</a>
-
-
-
+<div class="container d-flex justify-content-center align-items-center vh-100">
+    <div class="card p-4 text-center shadow" style="width: 20rem;">
+        <h2 class="card-title mb-4">Gestión de Videos</h2>
+        <a href="video/list.html" class="btn btn-primary mb-2">Listar Videos</a>
+        <a href="video/add.html" class="btn btn-success">Guardar Videos</a>
+    </div>
+</div>
 </body>
 </html>
