--- a/video/add.html
+++ b/video/add.html
@@ -3,26 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
 </head>
 <body>
 
 
-
-<h2>Adicionar nota</h2>
-
-<form >
-    <label for="code">Code:</label><br>
-    <input type="text" id="code" name="code" value=""><br>
-
-    <label for="title">Title:</label><br>
-    <input type="text" id="title" name="title" value=""><br><br>
-
-    <input type="button" value="Guardar" class="btn btn-primary" onclick="add();">
-</form>
-
-
-
-<a href="../index.html" class="link-secondary">Volver al inicio</a>
+<div class="container mt-5">
+    <h2 class="text-center">Agregar vídeo</h2>
+    <form class="p-4 border rounded">
+        <div class="mb-3">
+            <label for="code" class="form-label">Code:</label>
+            <input type="text" id="code" name="code" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="title" class="form-label">Title:</label>
+            <input type="text" id="title" name="title" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="description" class="form-label">Description:</label>
+            <input type="text" id="description" name="description" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="duration" class="form-label">Duration:</label>
+            <input type="number" id="duration" name="duration" class="form-control">
+        </div>
+        <button type="button" class="btn btn-primary" onclick="add();">Guardar</button>
+        <a href="../index.html" class="btn btn-secondary">Volver al inicio</a>
+    </form>
+</div>
 
 </body>
 </html>
@@ -38,10 +48,14 @@
 
         var code = document.getElementById("code");
         var title = document.getElementById("title");
+        var description = document.getElementById("description");
+        var duration = document.getElementById("duration");
 
         var newVideo = {
             "code": code.value,
-            "title": title.value
+            "title": title.value,
+            "description": description.value,
+            "duration": duration.value
         }
 
         console.log("Adding video:" + JSON.stringify(newVideo));
